--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -22,6 +22,10 @@ jobs:
 
     steps:
     - uses: actions/checkout@v2 
+    
+    - name: Install Doxygen
+      # Install doxygen from apt
+      run: sudo apt-get -y install doxygen
       
     - name: Configure CMake
       # Configure CMake in a 'build' subdirectory. `CMAKE_BUILD_TYPE` is only required if you are using a single-configuration generator such as make.
