--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -25,7 +25,7 @@ jobs:
     
     - name: Install Doxygen
       # Install doxygen from apt
-      run: sudo apt-get -y install doxygen
+      run: sudo apt-get -y install doxygen graphviz
       
     - name: Configure CMake
       # Configure CMake in a 'build' subdirectory. `CMAKE_BUILD_TYPE` is only required if you are using a single-configuration generator such as make.
