--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -41,3 +41,19 @@ jobs:
       # Execute tests defined by the CMake configuration.  
       # See https://cmake.org/cmake/help/latest/manual/ctest.1.html for more detail
       run: ctest -C ${{env.BUILD_TYPE}}
+      
+    - name: Install
+      run: cmake --install ${{github.workspace}}/build --config %{{env.BUILD_TYPE}}
+    
+    - name: Update Doxygen Pages
+      run: |
+        mkdir ${{github.workspace}}/docs 
+        cp -rf ${{github.workspace}}/build/share/docs/html/* ${{github.workspace}}/docs/.
+        git config --global user.name 'Andrew Coughtrie'
+        git config --global user.email 'andrewcoughtrie@users.noreply.github.com'
+        git stash save "Doxygen deploy"
+        git checkout gh-pages
+        git stash pop
+        git add docs/*
+        git commit -m "Update Doxygen documentation"
+        git push origin gh-pages
