--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -46,13 +46,14 @@ jobs:
       run: cmake --install ${{github.workspace}}/build --config %{{env.BUILD_TYPE}}
     
     - name: Update Doxygen Pages
-      run: mkdir -p ${{github.workspace}}/docs 
-           cp -rf ${{github.workspace}}/build/share/docs/html/* ${{github.workspace}}/docs/.
-           git config --global user.name 'Andrew Coughtrie'
-           git config --global user.email 'andrewcoughtrie@users.noreply.github.com'
-           git stash save "Doxygen deploy"
-           git checkout gh-pages
-           git stash pop
-           git add docs/*
-           git commit -m "Update Doxygen documentation"
-           git push origin gh-pages
+      run: |
+       mkdir -p ${{github.workspace}}/docs 
+       cp -rf ${{github.workspace}}/build/share/docs/html/* ${{github.workspace}}/docs/.
+       git config --global user.name 'Andrew Coughtrie'
+       git config --global user.email 'andrewcoughtrie@users.noreply.github.com' 
+     #  git stash save "Doxygen deploy"
+     #  git checkout gh-pages
+     #  git stash pop
+     #  git add docs/*
+     #  git commit -m "Update Doxygen documentation"
+     #  git push origin gh-pages
