--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -51,9 +51,9 @@ jobs:
        cp -rf ${{github.workspace}}/build/share/docs/html/* ${{github.workspace}}/docs/.
        git config --global user.name 'Andrew Coughtrie'
        git config --global user.email 'andrewcoughtrie@users.noreply.github.com' 
-     #  git stash save "Doxygen deploy"
-     #  git checkout gh-pages
-     #  git stash pop
-     #  git add docs/*
-     #  git commit -m "Update Doxygen documentation"
-     #  git push origin gh-pages
+       git stash save "Doxygen deploy"
+       git checkout --progress --force -B gh-pages refs/remotes/origin/gh-pages
+       git stash pop
+       git add docs/*
+       git commit -m "Update Doxygen documentation"
+       git push
