--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -57,6 +57,6 @@ jobs:
        git stash save "Doxygen deploy"
        git checkout --progress --force -B gh-pages origin/gh-pages
        git stash pop
-       git add docs
+       git status
        git commit -m "Update Doxygen documentation"
        git push
