--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -3,8 +3,6 @@ name: testing
 on:
   push:
     branches: [ main ]
-  pull_request:
-    branches: [ main ]
 
 env:
   # Customize the CMake build type here (Release, Debug, RelWithDebInfo, etc.)
@@ -30,26 +28,16 @@ jobs:
     - name: Configure CMake
       # Configure CMake in a 'build' subdirectory. `CMAKE_BUILD_TYPE` is only required if you are using a single-configuration generator such as make.
       # See https://cmake.org/cmake/help/latest/variable/CMAKE_BUILD_TYPE.html?highlight=cmake_build_type
-      run: cmake -B ${{github.workspace}}/build -DCMAKE_BUILD_TYPE=${{env.BUILD_TYPE}} -DCMAKE_CXX_COMPILER=${{ matrix.compiler }} -DINCLUDE_GTEST=ON -DWARNINGS_AS_ERRORS=ON
+      run: cmake -B ${{github.workspace}}/build -DCMAKE_BUILD_TYPE=${{env.BUILD_TYPE}} -DCMAKE_CXX_COMPILER=${{ matrix.compiler }} -DINCLUDE_GTEST=ON
 
     - name: Build
       # Build your program with the given configuration
-      run: cmake --build ${{github.workspace}}/build --config ${{env.BUILD_TYPE}}
-
-    - name: Test
-      working-directory: ${{github.workspace}}/build
-      # Execute tests defined by the CMake configuration.  
-      # See https://cmake.org/cmake/help/latest/manual/ctest.1.html for more detail
-      run: ctest -C ${{env.BUILD_TYPE}}
-      
-    - name: Install
-      run: cmake --install ${{github.workspace}}/build --config %{{env.BUILD_TYPE}}
+      run: cmake --build ${{github.workspace}}/build --config ${{env.BUILD_TYPE}} --target doxygen-docs
     
     - name: Update Doxygen Pages
       run: |
        mkdir -p ${{github.workspace}}/docs 
-       cp -rf ${{github.workspace}}/build/share/docs/html/* ${{github.workspace}}/docs/.
-       ls ${{github.workspace}}/docs/
+       cp -rf ${{github.workspace}}/build/html/* ${{github.workspace}}/docs/.
        git config --global user.name 'Andrew Coughtrie'
        git config --global user.email 'andrewcoughtrie@users.noreply.github.com' 
        git fetch --all
@@ -57,6 +45,5 @@ jobs:
        git stash save "Doxygen deploy"
        git checkout --progress --force -B gh-pages origin/gh-pages
        git stash pop
-       git status
        git commit -m "Update Doxygen documentation"
        git push
