--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -43,7 +43,7 @@ jobs:
        git fetch --all
        git add docs
        git stash save "Doxygen deploy"
-       git checkout --progress --force -B gh-pages origin/gh-pages
+       git checkout gh-pages
        git stash pop
        git add docs
        git commit -m "Update Doxygen documentation"
