--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -1,4 +1,4 @@
-name: testing
+name: Documentation
 
 on:
   push:
@@ -28,7 +28,7 @@ jobs:
     - name: Configure CMake
       # Configure CMake in a 'build' subdirectory. `CMAKE_BUILD_TYPE` is only required if you are using a single-configuration generator such as make.
       # See https://cmake.org/cmake/help/latest/variable/CMAKE_BUILD_TYPE.html?highlight=cmake_build_type
-      run: cmake -B ${{github.workspace}}/build -DCMAKE_BUILD_TYPE=${{env.BUILD_TYPE}} -DCMAKE_CXX_COMPILER=${{ matrix.compiler }} -DINCLUDE_GTEST=ON
+      run: cmake -B ${{github.workspace}}/build -DCMAKE_BUILD_TYPE=${{env.BUILD_TYPE}} -DCMAKE_CXX_COMPILER=${{ matrix.compiler }} -DBUILD_TESTS=OFF
 
     - name: Build
       # Build your program with the given configuration
@@ -38,8 +38,8 @@ jobs:
       run: |
        mkdir -p ${{github.workspace}}/docs 
        cp -rf ${{github.workspace}}/build/html/* ${{github.workspace}}/docs/.
-       git config --global user.name 'Andrew Coughtrie'
-       git config --global user.email 'andrewcoughtrie@users.noreply.github.com' 
+       git config --global user.name 'github-actions[bot]'
+       git config --global user.email 'github-actions[bot]@users.noreply.github.com' 
        git add --force docs
        git stash
        git remote update
