--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -48,5 +48,5 @@ jobs:
        git stash pop
        git reset
        git add --force docs
-       git commit -m "Update Doxygen documentation"
+       git commit --allow-empty -m "Update Doxygen documentation"
        git push
