--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -6,7 +6,7 @@ on:
     paths:
       - 'src/**.h'
       - 'src/**.cpp'
-      - 'documentation/**md'
+      - 'documentation/**.md'
 
 env:
   # Customize the CMake build type here (Release, Debug, RelWithDebInfo, etc.)
